// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SrpInputGrid renders with custom uniqueId 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "gap": 4,
      "marginBottom": 24,
      "marginTop": 8,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#f3f5f9",
        "borderRadius": 10,
        "maxHeight": "auto",
        "minHeight": 210,
        "paddingTop": 16,
      }
    }
  >
    <View
      style={
        {
          "paddingHorizontal": 16,
        }
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "width": "100%",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderColor": "#b7bbc8",
              "borderRadius": 8,
              "borderWidth": 1,
              "flexDirection": "row",
              "height": 0,
              "left": 0,
              "opacity": 0,
              "paddingHorizontal": 16,
              "position": "absolute",
              "top": 0,
            }
          }
          testID="textfield"
        >
          <View
            style={
              [
                {
                  "backgroundColor": "inherit",
                  "height": 38,
                },
                {
                  "flex": 1,
                },
              ]
            }
          >
            <TextInput
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect={false}
              autoFocus={false}
              blurOnSubmit={false}
              editable={true}
              enablesReturnKeyAutomatically={false}
              importantForAutofill="no"
              keyboardType="visible-password"
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              onSelectionChange={[Function]}
              onSubmitEditing={[Function]}
              placeholder=""
              placeholderTextColor="#b7bbc8"
              returnKeyType="done"
              showSoftInputOnFocus={true}
              spellCheck={false}
              style={
                {
                  "backgroundColor": "transparent",
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "color": "#686e7d",
                  "display": "flex",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "height": 66,
                  "letterSpacing": 0,
                  "lineHeight": 20,
                  "opacity": 1,
                  "paddingBottom": 12,
                  "paddingTop": 12,
                  "paddingVertical": 0,
                }
              }
              submitBehavior="submit"
              testID="seed-phrase-input_0"
              textAlignVertical="top"
              textContentType="none"
              value=""
            />
          </View>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderColor": "#b7bbc8",
              "borderRadius": 8,
              "borderWidth": 0,
              "display": "flex",
              "flex": 1,
              "flexDirection": "row",
              "height": 40,
              "opacity": 1,
              "paddingHorizontal": 0,
            }
          }
          testID="textfield"
        >
          <View
            style={
              [
                {
                  "backgroundColor": "inherit",
                  "height": 38,
                },
                {
                  "flex": 1,
                },
              ]
            }
          >
            <TextInput
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect={false}
              autoFocus={true}
              blurOnSubmit={false}
              editable={true}
              enablesReturnKeyAutomatically={false}
              importantForAutofill="no"
              keyboardType="visible-password"
              multiline={true}
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              onSelectionChange={[Function]}
              onSubmitEditing={[Function]}
              placeholder="Enter your Secret Recovery Phrase"
              placeholderTextColor="#686e7d"
              returnKeyType="done"
              showSoftInputOnFocus={true}
              spellCheck={false}
              style={
                {
                  "backgroundColor": "transparent",
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "color": "#686e7d",
                  "display": "flex",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "height": 66,
                  "letterSpacing": 0,
                  "lineHeight": 20,
                  "opacity": 1,
                  "paddingBottom": 12,
                  "paddingTop": 12,
                  "paddingVertical": 0,
                }
              }
              submitBehavior="submit"
              testID="seed-phrase-input"
              textAlignVertical="top"
              textContentType="none"
              value=""
            />
          </View>
        </View>
      </View>
    </View>
  </View>
  <Text
    accessibilityRole="text"
    onPress={[Function]}
    style={
      {
        "alignSelf": "flex-end",
        "color": "#4459ff",
        "fontFamily": "Geist-Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "paddingBottom": 1,
        "paddingTop": 8,
        "textAlign": "right",
      }
    }
  >
    Paste
  </Text>
</View>
`;

exports[`SrpInputGrid renders with disabled state 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "gap": 4,
      "marginBottom": 24,
      "marginTop": 8,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#f3f5f9",
        "borderRadius": 10,
        "maxHeight": "auto",
        "minHeight": 210,
        "paddingTop": 16,
      }
    }
  >
    <View
      style={
        {
          "paddingHorizontal": 16,
        }
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "width": "100%",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderColor": "#b7bbc8",
              "borderRadius": 8,
              "borderWidth": 1,
              "flexDirection": "row",
              "height": 0,
              "left": 0,
              "opacity": 0,
              "paddingHorizontal": 16,
              "position": "absolute",
              "top": 0,
            }
          }
          testID="textfield"
        >
          <View
            style={
              [
                {
                  "backgroundColor": "inherit",
                  "height": 38,
                },
                {
                  "flex": 1,
                },
              ]
            }
          >
            <TextInput
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect={false}
              autoFocus={false}
              blurOnSubmit={false}
              editable={false}
              enablesReturnKeyAutomatically={false}
              importantForAutofill="no"
              keyboardType="visible-password"
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              onSelectionChange={[Function]}
              onSubmitEditing={[Function]}
              placeholder=""
              placeholderTextColor="#b7bbc8"
              returnKeyType="done"
              showSoftInputOnFocus={true}
              spellCheck={false}
              style={
                {
                  "backgroundColor": "transparent",
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "color": "#686e7d",
                  "display": "flex",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "height": 66,
                  "letterSpacing": 0,
                  "lineHeight": 20,
                  "opacity": 1,
                  "paddingBottom": 12,
                  "paddingTop": 12,
                  "paddingVertical": 0,
                }
              }
              submitBehavior="submit"
              testID="seed-phrase-input_0"
              textAlignVertical="top"
              textContentType="none"
              value=""
            />
          </View>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderColor": "#b7bbc8",
              "borderRadius": 8,
              "borderWidth": 0,
              "display": "flex",
              "flex": 1,
              "flexDirection": "row",
              "height": 40,
              "opacity": 0.5,
              "paddingHorizontal": 0,
            }
          }
          testID="textfield"
        >
          <View
            style={
              [
                {
                  "backgroundColor": "inherit",
                  "height": 38,
                },
                {
                  "flex": 1,
                },
              ]
            }
          >
            <TextInput
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect={false}
              autoFocus={true}
              blurOnSubmit={false}
              editable={false}
              enablesReturnKeyAutomatically={false}
              importantForAutofill="no"
              keyboardType="visible-password"
              multiline={true}
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              onSelectionChange={[Function]}
              onSubmitEditing={[Function]}
              placeholder="Enter your Secret Recovery Phrase"
              placeholderTextColor="#686e7d"
              returnKeyType="done"
              showSoftInputOnFocus={true}
              spellCheck={false}
              style={
                {
                  "backgroundColor": "transparent",
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "color": "#686e7d",
                  "display": "flex",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "height": 66,
                  "letterSpacing": 0,
                  "lineHeight": 20,
                  "opacity": 1,
                  "paddingBottom": 12,
                  "paddingTop": 12,
                  "paddingVertical": 0,
                }
              }
              submitBehavior="submit"
              testID="seed-phrase-input"
              textAlignVertical="top"
              textContentType="none"
              value=""
            />
          </View>
        </View>
      </View>
    </View>
  </View>
  <Text
    accessibilityRole="text"
    onPress={[Function]}
    style={
      {
        "alignSelf": "flex-end",
        "color": "#4459ff",
        "fontFamily": "Geist-Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "paddingBottom": 1,
        "paddingTop": 8,
        "textAlign": "right",
      }
    }
  >
    Paste
  </Text>
</View>
`;

exports[`SrpInputGrid renders with empty seed phrase 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "gap": 4,
      "marginBottom": 24,
      "marginTop": 8,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#f3f5f9",
        "borderRadius": 10,
        "maxHeight": "auto",
        "minHeight": 210,
        "paddingTop": 16,
      }
    }
  >
    <View
      style={
        {
          "paddingHorizontal": 16,
        }
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "width": "100%",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderColor": "#b7bbc8",
              "borderRadius": 8,
              "borderWidth": 1,
              "flexDirection": "row",
              "height": 0,
              "left": 0,
              "opacity": 0,
              "paddingHorizontal": 16,
              "position": "absolute",
              "top": 0,
            }
          }
          testID="textfield"
        >
          <View
            style={
              [
                {
                  "backgroundColor": "inherit",
                  "height": 38,
                },
                {
                  "flex": 1,
                },
              ]
            }
          >
            <TextInput
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect={false}
              autoFocus={false}
              blurOnSubmit={false}
              editable={true}
              enablesReturnKeyAutomatically={false}
              importantForAutofill="no"
              keyboardType="visible-password"
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              onSelectionChange={[Function]}
              onSubmitEditing={[Function]}
              placeholder=""
              placeholderTextColor="#b7bbc8"
              returnKeyType="done"
              showSoftInputOnFocus={true}
              spellCheck={false}
              style={
                {
                  "backgroundColor": "transparent",
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "color": "#686e7d",
                  "display": "flex",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "height": 66,
                  "letterSpacing": 0,
                  "lineHeight": 20,
                  "opacity": 1,
                  "paddingBottom": 12,
                  "paddingTop": 12,
                  "paddingVertical": 0,
                }
              }
              submitBehavior="submit"
              testID="seed-phrase-input_0"
              textAlignVertical="top"
              textContentType="none"
              value=""
            />
          </View>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderColor": "#b7bbc8",
              "borderRadius": 8,
              "borderWidth": 0,
              "display": "flex",
              "flex": 1,
              "flexDirection": "row",
              "height": 40,
              "opacity": 1,
              "paddingHorizontal": 0,
            }
          }
          testID="textfield"
        >
          <View
            style={
              [
                {
                  "backgroundColor": "inherit",
                  "height": 38,
                },
                {
                  "flex": 1,
                },
              ]
            }
          >
            <TextInput
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect={false}
              autoFocus={true}
              blurOnSubmit={false}
              editable={true}
              enablesReturnKeyAutomatically={false}
              importantForAutofill="no"
              keyboardType="visible-password"
              multiline={true}
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              onSelectionChange={[Function]}
              onSubmitEditing={[Function]}
              placeholder="Enter your Secret Recovery Phrase"
              placeholderTextColor="#686e7d"
              returnKeyType="done"
              showSoftInputOnFocus={true}
              spellCheck={false}
              style={
                {
                  "backgroundColor": "transparent",
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "color": "#686e7d",
                  "display": "flex",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "height": 66,
                  "letterSpacing": 0,
                  "lineHeight": 20,
                  "opacity": 1,
                  "paddingBottom": 12,
                  "paddingTop": 12,
                  "paddingVertical": 0,
                }
              }
              submitBehavior="submit"
              testID="seed-phrase-input"
              textAlignVertical="top"
              textContentType="none"
              value=""
            />
          </View>
        </View>
      </View>
    </View>
  </View>
  <Text
    accessibilityRole="text"
    onPress={[Function]}
    style={
      {
        "alignSelf": "flex-end",
        "color": "#4459ff",
        "fontFamily": "Geist-Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "paddingBottom": 1,
        "paddingTop": 8,
        "textAlign": "right",
      }
    }
  >
    Paste
  </Text>
</View>
`;

exports[`SrpInputGrid renders with multiple words 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "gap": 4,
      "marginBottom": 24,
      "marginTop": 8,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#f3f5f9",
        "borderRadius": 10,
        "maxHeight": "auto",
        "minHeight": 210,
        "paddingTop": 16,
      }
    }
  >
    <View
      style={
        {
          "paddingHorizontal": 16,
        }
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "width": "100%",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderColor": "#b7bbc8",
              "borderRadius": 8,
              "borderWidth": 1,
              "color": "#121314",
              "flex": 0,
              "flexDirection": "row",
              "fontFamily": "Geist-Regular",
              "fontSize": 16,
              "height": 40,
              "justifyContent": "flex-start",
              "marginBottom": 8,
              "marginRight": "3%",
              "minWidth": 0,
              "opacity": 1,
              "overflow": "hidden",
              "paddingHorizontal": 16,
              "paddingLeft": 8,
              "paddingVertical": 4,
              "textAlignVertical": "center",
              "width": "31.33%",
            }
          }
          testID="textfield"
        >
          <View
            style={
              {
                "marginRight": 8,
              }
            }
            testID="textfield-startacccessory"
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist-Bold",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                  "marginRight": -4,
                }
              }
            >
              1
              .
            </Text>
          </View>
          <View
            style={
              [
                {
                  "backgroundColor": "inherit",
                  "height": 38,
                },
                {
                  "flex": 1,
                },
              ]
            }
          >
            <TextInput
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect={false}
              autoFocus={false}
              blurOnSubmit={false}
              editable={true}
              enablesReturnKeyAutomatically={false}
              importantForAutofill="no"
              keyboardType="visible-password"
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              onSelectionChange={[Function]}
              onSubmitEditing={[Function]}
              placeholder=""
              placeholderTextColor="#b7bbc8"
              returnKeyType="done"
              showSoftInputOnFocus={true}
              spellCheck={false}
              style={
                {
                  "backgroundColor": "#ffffff",
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "color": "#121314",
                  "flex": 1,
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "height": 24,
                  "letterSpacing": 0,
                  "maxWidth": "100%",
                  "minWidth": 0,
                  "opacity": 1,
                  "paddingRight": 8,
                  "paddingVertical": 0,
                }
              }
              submitBehavior="submit"
              testID="seed-phrase-input_0"
              textAlignVertical="center"
              textContentType="none"
              value="word1"
            />
          </View>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderColor": "#b7bbc8",
              "borderRadius": 8,
              "borderWidth": 1,
              "color": "#121314",
              "flex": 0,
              "flexDirection": "row",
              "fontFamily": "Geist-Regular",
              "fontSize": 16,
              "height": 40,
              "justifyContent": "flex-start",
              "marginBottom": 8,
              "marginRight": "3%",
              "minWidth": 0,
              "opacity": 1,
              "overflow": "hidden",
              "paddingHorizontal": 16,
              "paddingLeft": 8,
              "paddingVertical": 4,
              "textAlignVertical": "center",
              "width": "31.33%",
            }
          }
          testID="textfield"
        >
          <View
            style={
              {
                "marginRight": 8,
              }
            }
            testID="textfield-startacccessory"
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist-Bold",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                  "marginRight": -4,
                }
              }
            >
              2
              .
            </Text>
          </View>
          <View
            style={
              [
                {
                  "backgroundColor": "inherit",
                  "height": 38,
                },
                {
                  "flex": 1,
                },
              ]
            }
          >
            <TextInput
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect={false}
              autoFocus={false}
              blurOnSubmit={false}
              editable={true}
              enablesReturnKeyAutomatically={false}
              importantForAutofill="no"
              keyboardType="visible-password"
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              onSelectionChange={[Function]}
              onSubmitEditing={[Function]}
              placeholder=""
              placeholderTextColor="#b7bbc8"
              returnKeyType="done"
              showSoftInputOnFocus={true}
              spellCheck={false}
              style={
                {
                  "backgroundColor": "#ffffff",
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "color": "#121314",
                  "flex": 1,
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "height": 24,
                  "letterSpacing": 0,
                  "maxWidth": "100%",
                  "minWidth": 0,
                  "opacity": 1,
                  "paddingRight": 8,
                  "paddingVertical": 0,
                }
              }
              submitBehavior="submit"
              testID="seed-phrase-input_1"
              textAlignVertical="center"
              textContentType="none"
              value="word2"
            />
          </View>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderColor": "#b7bbc8",
              "borderRadius": 8,
              "borderWidth": 1,
              "color": "#121314",
              "flex": 0,
              "flexDirection": "row",
              "fontFamily": "Geist-Regular",
              "fontSize": 16,
              "height": 40,
              "justifyContent": "flex-start",
              "marginBottom": 8,
              "marginRight": 0,
              "minWidth": 0,
              "opacity": 1,
              "overflow": "hidden",
              "paddingHorizontal": 16,
              "paddingLeft": 8,
              "paddingVertical": 4,
              "textAlignVertical": "center",
              "width": "31.33%",
            }
          }
          testID="textfield"
        >
          <View
            style={
              {
                "marginRight": 8,
              }
            }
            testID="textfield-startacccessory"
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "Geist-Bold",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                  "marginRight": -4,
                }
              }
            >
              3
              .
            </Text>
          </View>
          <View
            style={
              [
                {
                  "backgroundColor": "inherit",
                  "height": 38,
                },
                {
                  "flex": 1,
                },
              ]
            }
          >
            <TextInput
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect={false}
              autoFocus={false}
              blurOnSubmit={false}
              editable={true}
              enablesReturnKeyAutomatically={false}
              importantForAutofill="no"
              keyboardType="visible-password"
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              onSelectionChange={[Function]}
              onSubmitEditing={[Function]}
              placeholder=""
              placeholderTextColor="#b7bbc8"
              returnKeyType="done"
              showSoftInputOnFocus={true}
              spellCheck={false}
              style={
                {
                  "backgroundColor": "#ffffff",
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "color": "#121314",
                  "flex": 1,
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "height": 24,
                  "letterSpacing": 0,
                  "maxWidth": "100%",
                  "minWidth": 0,
                  "opacity": 1,
                  "paddingRight": 8,
                  "paddingVertical": 0,
                }
              }
              submitBehavior="submit"
              testID="seed-phrase-input_2"
              textAlignVertical="center"
              textContentType="none"
              value="word3"
            />
          </View>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderColor": "#b7bbc8",
              "borderRadius": 8,
              "borderWidth": 1,
              "flexDirection": "row",
              "height": 0,
              "left": 0,
              "opacity": 0,
              "paddingHorizontal": 16,
              "position": "absolute",
              "top": 0,
            }
          }
          testID="textfield"
        >
          <View
            style={
              [
                {
                  "backgroundColor": "inherit",
                  "height": 38,
                },
                {
                  "flex": 1,
                },
              ]
            }
          >
            <TextInput
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect={false}
              autoFocus={false}
              blurOnSubmit={false}
              editable={true}
              enablesReturnKeyAutomatically={false}
              importantForAutofill="no"
              keyboardType="visible-password"
              multiline={true}
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              onSelectionChange={[Function]}
              onSubmitEditing={[Function]}
              placeholder="Enter your Secret Recovery Phrase"
              placeholderTextColor="#686e7d"
              returnKeyType="done"
              showSoftInputOnFocus={true}
              spellCheck={false}
              style={
                {
                  "backgroundColor": "transparent",
                  "borderColor": "transparent",
                  "borderWidth": 1,
                  "color": "#686e7d",
                  "display": "flex",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "height": 66,
                  "letterSpacing": 0,
                  "lineHeight": 20,
                  "opacity": 1,
                  "paddingBottom": 12,
                  "paddingTop": 12,
                  "paddingVertical": 0,
                }
              }
              submitBehavior="submit"
              testID="seed-phrase-input"
              textAlignVertical="top"
              textContentType="none"
              value="word1"
            />
          </View>
        </View>
      </View>
    </View>
  </View>
  <Text
    accessibilityRole="text"
    onPress={[Function]}
    style={
      {
        "alignSelf": "flex-end",
        "color": "#4459ff",
        "fontFamily": "Geist-Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "paddingBottom": 1,
        "paddingTop": 8,
        "textAlign": "right",
      }
    }
  >
    Clear all
  </Text>
</View>
`;
